--- a/data analysis code/Breast Cancer data analysis/README
+++ b/data analysis code/Breast Cancer data analysis/README
@@ -1,1 +1,1 @@
-See Data_Analysis_BCdata.md for step by step analysis.  
+Data_Analysis_BCdata.md illustrates the application of the SPACE method on the breast cancer dataset.
